--- a/src/app/css/slider.css
+++ b/src/app/css/slider.css
@@ -100,7 +100,6 @@
   align-items: center;
 }
 
-
 .rotated-box {
   width: 200px;
   margin-top: -50px;
@@ -112,7 +111,7 @@
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
 }
 
-.btn-gray-call{
+.btn-gray-call {
   font-weight: 700;
   height: auto;
   width: auto;
@@ -127,14 +126,13 @@
   margin-bottom: 21px;
 }
 
-.call-paragraph{
+.call-paragraph {
   margin-bottom: 25px;
 }
 
-.schedule{
+.schedule {
   height: 180px;
 }
-
 
 /* footer start  */
 .container-cards {
@@ -193,37 +191,61 @@ footer .bi:hover {
 
 /* footer end  */
 
-
 @media screen and (max-width: 767px) {
-.px-4-5{
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-.box-third{
-  display: flex;
-  flex-direction: column;
-}
+  .px-4-5 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+  .box-third {
+    display: flex;
+    flex-direction: column;
+  }
 
-.box-third-container{
-  width: 100%;
-}
+  .box-third-container {
+    width: 100%;
+  }
 
-.rotate-cards{
-  display: flex;
-  flex-direction: column;
-  gap: 25px;
-}
+  .rotate-cards {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+  }
 
-.slider-container{
-  height: 400px;
-}
+  .slider-container {
+    height: 400px;
+  }
 
-.footer{
-  display: flex;
-  flex-direction: column;
-}
+  .footer {
+    display: flex;
+    flex-direction: column;
+  }
 
-.footer-container{
-  width: 100%;
+  .footer-container {
+    width: 100%;
+  }
+  .w-241 {
+    width: 85%;
+    margin-left: 30px;
+  }
+
+  .btn-res{
+    margin-left: 30px;
+    margin-top: 20px;
+  }
+
+  .rotated-box {
+    width: 169px;
+    margin-top: -50px;
+    height: 171px;
+    background-color: #d3d3d3;
+    border: 2px solid #333;
+    border-radius: 10px;
+    transform: rotate(-15deg);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
+} 
+
+.text-res{
+  margin-top: 15px;
+  width: 94%;
 }
 }
