--- a/src/app/css/slider.css
+++ b/src/app/css/slider.css
@@ -14,6 +14,16 @@
   width: 200%;
 }
 
+.slider-container {
+  position: relative;
+  width: 100%;
+  height: 300px !important;
+  background-color: #ddd;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+}
+
 .slide {
   min-width: 100%;
   display: flex;
@@ -53,11 +63,12 @@
   height: 10px;
   width: 10px;
   margin: 0 5px;
-  background-color: #ccc;
+  background-color: #fff;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.3s;
   cursor: pointer;
+  border: 1px solid black;
 }
 
 .dot.active {
@@ -128,6 +139,7 @@
 
 .call-paragraph {
   margin-bottom: 25px;
+  border-bottom: 1px solid black;
 }
 
 .schedule {
@@ -136,8 +148,6 @@
 
 /* footer start  */
 .container-cards {
-  /* background-color: #ffeb99; */
-  padding: 40px;
   border-radius: 10px;
   overflow: hidden;
 }
@@ -189,6 +199,10 @@ footer .bi:hover {
   text-decoration: none;
 }
 
+.footer-col{
+margin-left: 64px;
+}
+
 /* footer end  */
 
 @media screen and (max-width: 767px) {
@@ -228,7 +242,7 @@ footer .bi:hover {
     margin-left: 30px;
   }
 
-  .btn-res{
+  .btn-res {
     margin-left: 30px;
     margin-top: 20px;
   }
@@ -242,19 +256,19 @@ footer .bi:hover {
     border-radius: 10px;
     transform: rotate(-15deg);
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
-} 
+  }
 
-.text-res{
-  margin-top: 15px;
-  width: 94%;
-}
+  .text-res {
+    margin-top: 15px;
+    width: 94%;
+  }
 
-.res-nav a{
-  text-align: center;
-  padding-top: 24px;
-}
+  .res-nav a {
+    text-align: center;
+    padding-top: 24px;
+  }
 
-.res-nav svg{
-  margin: auto;
-}
+  .res-nav svg {
+    margin: auto;
+  }
 }
