--- a/src/app/css/slider.css
+++ b/src/app/css/slider.css
@@ -287,3 +287,16 @@ margin-left: 64px;
   }
   
 }
+
+
+@media only screen and (min-width: 1920px) and (min-height: 1080px) {
+  .slide {
+    min-width: 100%;
+    padding-left: 15% !important;
+  }
+
+  .text-res {
+    margin-top: 15px;
+    width: 88%;
+  }
+}
