--- a/src/app/css/slider.css
+++ b/src/app/css/slider.css
@@ -206,6 +206,13 @@ margin-left: 64px;
 /* footer end  */
 
 @media screen and (max-width: 767px) {
+
+  .IndustriesServed{
+    margin-left: 15px;
+    margin-right: 15px;
+    display: flex;
+    flex-direction: column;
+  }
   
 .footer-container-left{
   margin-left: 2px;
@@ -298,5 +305,18 @@ margin-left: 64px;
   .text-res {
     margin-top: 15px;
     width: 88%;
+  }
+
+  .header-res{
+    padding-left: 15rem;
+    padding-right: 15rem;
+  }
+
+  .res-desktop{
+    padding-left: 15rem;
+    padding-right: 15rem;
+  }
+  .res-ebook{
+    width: 90%;
   }
 }
