--- a/src/app/css/slider.css
+++ b/src/app/css/slider.css
@@ -17,7 +17,7 @@
 .slider-container {
   position: relative;
   width: 100%;
-  height: 300px !important;
+  height: 225px !important;
   background-color: #ddd;
   display: flex;
   align-items: center;
@@ -199,41 +199,81 @@ footer .bi:hover {
   text-decoration: none;
 }
 
-.footer-container-left{
-margin-left: 64px;
+.footer-container-left {
+  margin-left: 64px;
 }
 
-.bottom-service{
-width: 29%;
+.bottom-service {
+  width: 29%;
 }
 
-.bottom-service-hr{
+.bottom-service-hr {
   width: 60%;
 }
 
 /* footer end  */
 
+/* CSS for the rotated image */
+/* CSS for the rotated image */
+.rotate-img-container {
+  transform: rotate(-15deg);
+  margin-top: 38px;
+  margin-left: 77px;
+}
+
+/* Slider container */
+.slider-content {
+  height: 200px;
+}
+
+/* Positioning buttons */
+.prev,
+.next {
+  z-index: 10;
+}
+
+/* Adjust text and content */
+.container-cards {
+  position: relative;
+  z-index: 2;
+  padding-top: 40px;
+}
+
+.rotate-cards {
+  margin-left: 11%;
+  margin-top: -8%;
+}
+
+.second-slide-text {
+  margin-left: 11%;
+  margin-top: -8%;
+  width: 80%;
+}
+
 @media screen and (max-width: 767px) {
-
-  .bottom-service-hr{
+  .btn-offer {
+    margin-left: 1px !important;
+    margin-top: 20px;
+  }
+  .bottom-service-hr {
     width: 90%;
   }
 
-  .bottom-service{
+  .bottom-service {
     width: 90%;
   }
 
-  .IndustriesServed{
+  .IndustriesServed {
     margin-left: 15px;
     margin-right: 15px;
     display: flex;
     flex-direction: column;
   }
-  
-.footer-container-left{
-  margin-left: 2px;
+
+  .footer-container-left {
+    margin-left: 2px;
   }
-  
+
   .px-4-5 {
     padding-left: 1rem;
     padding-right: 1rem;
@@ -251,6 +291,8 @@ width: 29%;
     display: flex;
     flex-direction: column;
     gap: 25px;
+    margin-top: 125px;
+    margin-left: -5px;
   }
 
   .slider-container {
@@ -308,9 +350,7 @@ width: 29%;
     align-items: center;
     overflow: hidden;
   }
-  
 }
-
 
 @media only screen and (min-width: 1920px) and (min-height: 1080px) {
   .slide {
@@ -323,21 +363,20 @@ width: 29%;
     width: 88%;
   }
 
-  .header-res{
+  .header-res {
     padding-left: 15rem;
     padding-right: 15rem;
   }
 
-  .res-desktop{
+  .res-desktop {
     padding-left: 15rem;
     padding-right: 15rem;
   }
-  .res-ebook{
+  .res-ebook {
     width: 90%;
   }
 
-  .marketing{
+  .marketing {
     width: 91%;
   }
-  
 }
