--- a/src/app/css/slider.css
+++ b/src/app/css/slider.css
@@ -263,11 +263,9 @@ footer .bi:hover {
 }
 
 @media screen and (max-width: 767px) {
-
   .footer-second-container {
     margin-left: 1%;
   }
-  
 
   .footer-third-container {
     margin-left: 11%;
@@ -393,10 +391,10 @@ footer .bi:hover {
     padding-right: 15rem;
   }
 
-  .res-desktop {
+  /* .res-desktop {
     padding-left: 15rem;
     padding-right: 15rem;
-  }
+  } */
   .res-ebook {
     width: 90%;
   }
