--- a/src/app/css/slider.css
+++ b/src/app/css/slider.css
@@ -430,3 +430,19 @@ footer .bi:hover {
     width: 91%;
   }
 }
+
+
+@keyframes slideInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0); 
+  }
+}
+
+.slide-in {
+  animation: slideInUp 0.8s ease-out forwards;
+}
