--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,3 +27,20 @@ body {
     text-wrap: balance;
   }
 }
+
+
+.btn-gray {
+  height: 35px;
+  width: 280px;
+  background-color: white;
+  border: 1px solid black;
+  padding: 10px 30px;
+  border-radius: 20px;
+  font-size: 16px;
+  cursor: pointer;
+  display: inline-block;
+  transition: background-color 0.3s, color 0.3s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
