--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,6 +45,14 @@ body {
   align-items: center;
 }
 
+.rotate-slider{
+  rotate: -10deg;
+  border-radius: 16px;
+  margin-top: -60px;
+}
+.rotate-slider img{
+  border-radius: 45px !important;
+}
 .marketing-heading{
 font-size: 38px;
 }
@@ -65,6 +73,7 @@ font-size: 30px;
 .marketing-btn{
 font-size: 21px;
 }
+
 
 
 @media screen and (max-width: 767px) {
